# pbi-tools

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  readme.rst  setup.cfg  setup.py  test_pytest.py
.github/workflows/: bump.yml  pypi.yml
docs/: authors.rst  conf.py  deployment.rst  index.rst  prerequisites.rst  readme.rst
docs/api/: dataset.rst  datasource.rst  report.rst  token.rst  tools.rst  workspace.rst
docs/source/: conf.py  index.rst
pbi/: __init__.py  _version.py  capacity.py  classes.py  dataset.py  datasource.py  report.py  tenant.py  token.py  tools.py  workspace.py
pbi_tools/: __init__.py  deploy_utils.py  tools.py
src/pbi/: __init__.py  _version.py  dataset.py  deploy.py  portal.py  tenant.py  token.py  tools.py
src/pbi/api/: __init__.py  capacity.py  dataset.py  datasource.py  report.py  tenant.py  workspace.py
tests/: dataset.py  deploy.py  test_basic.py  test_connection.py
tests/data/: Deployment Aid Report.pbix
tests/fixtures/: Deployment Aid.pbix
tests/fixtures/Deployment Root/Model 1/: Report 1.pbix  Report 2.pbix
tests/fixtures/Deployment Root/Model 2/: Model.pbix  Report 1.pbix  Report 2.pbix
