[metadata]
name = pbi-api-thomas-daughters
version = 0.0.1
url = https://github.com/thomas-daughters/pbi-api
author = Sam Thomas
author_email = sam.thomas@redkite.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Object orientated Python wrapper for Power BI REST API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6